# adventofcode

./: README.md
2019/01/: .gitignore  Cargo.toml  README.md
2019/01/src/: main.rs
2019/02/: Cargo.toml  README.md
2019/02/src/: main.rs
2019/04/: password-count.js
2022/01/src/: main.rs
2022/02/: Cargo.toml
2022/02/src/: main.rs
2022/03/: Cargo.toml
2022/03/src/: main.rs
2022/04/src/: main.rs
2022/05/: Cargo.toml
2022/05/src/: main.rs
2022/06/src/: main.rs
2022/13/: Cargo.toml
2022/13/src/: main.rs
2023/: Cargo.toml
2023/.template/: Cargo.toml
2023/days/day1/: Cargo.toml
2023/days/day2/: Cargo.toml
2023/days/day2/src/: lib.rs
2023/days/day3/: Cargo.toml
2023/days/day3/src/: bounding_box.rs  gear.rs  lib.rs  part.rs  point.rs
2023/days/day4/: Cargo.toml
2023/days/day4/src/: card.rs  lib.rs
2023/days/day5/: Cargo.toml
2023/days/day5/src/: almanac_mapping.rs  almanac_range.rs  lib.rs
2023/days/day6/: Cargo.toml
2023/days/day6/src/: lib.rs
2023/template/: Cargo.toml
2023/utils/: Cargo.toml
2023/utils/src/: lib.rs
