[package]
name = "day2"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "day2-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day2-part2"
path = "src/bin/part2.rs"

[lib]
name = "aoc2023_day2"

[dependencies]
aoc2023-utils = { path = "../../utils" }
