[package]
name = "day3"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "day3-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day3-part2"
path = "src/bin/part2.rs"

[lib]
name = "aoc2023_day3"

[dependencies]
aoc2023-utils = { path = "../../utils" }
