[package]
name = "day5"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "day5-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day5-part2"
path = "src/bin/part2.rs"

[lib]
name = "aoc2023_day5"

[dependencies]
anyhow = "1.0.75"
aoc2023-utils = { path = "../../utils" }
rayon = "1.8.0"
thiserror = "1.0.50"
