[package]
name = "day6"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "day6-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day6-part2"
path = "src/bin/part2.rs"

[lib]
name = "aoc2023_day6"

[dependencies]
aoc2023-utils = { path = "../../utils" }
